# merlin-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Readme.md  Rocket.toml  docker-compose.yml  run.sh
migrations/2018-01-15-183552_foundation/: down.sql  up.sql
src/: auth.rs  main.rs  template.rs
src/db/: mod.rs  models.rs  schema.rs
src/routes/: auth.rs  components.rs  mod.rs  pages.rs  spells.rs
templates/: categories.hbs  category.hbs  component.hbs  components.hbs  index.hbs  page.hbs  page_edit.hbs  pages.hbs  search.hbs  spell.hbs  spells.hbs  wrapper.hbs
