[package]
name = "merlin"
version = "0.1.0"
authors = ["tene"]

[dependencies]
rocket = "0.3.6"
rocket_codegen = "0.3.6"
bigdecimal = "0.0.10"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
r2d2-diesel = "1.0"
r2d2 = "0.8"
serde = "*"
serde_json = "*"
serde_derive = "*"
[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json", "handlebars_templates","msgpack"]