[package]
name = "merlin"
version = "0.1.0"
authors = ["tene"]

[dependencies]
rocket = "0.3.6"
rocket_codegen = "0.3.6"
bigdecimal = "0.0.10"
diesel = { version = "1.1.1", features = ["postgres", "numeric", "r2d2"] }
diesel_full_text_search = "1.0.0"
dotenv = "0.9.0"
serde = "*"
serde_json = "*"
serde_derive = "*"
[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json", "handlebars_templates","msgpack"]