[package]
name = "merlin"
version = "0.1.0"
authors = ["tene"]

[dependencies]
pulldown-cmark = "0.1.2"
bigdecimal = "0.0.10"
handlebars = "0.32.0"
diesel = { version = "1.1.1", features = ["postgres", "numeric", "r2d2"] }
diesel_full_text_search = "1.0.0"
dotenv = "0.9.0"
serde = "*"
serde_json = "*"
serde_derive = "*"
[dependencies.rocket_contrib]
version = "0.4.0-dev"
path = "deps/Rocket/contrib"
default-features = false
features = ["json", "handlebars_templates","msgpack"]
[dependencies.rocket]
version = "0.4.0-dev"
path = "deps/Rocket/lib"
[dependencies.rocket_codegen]
version = "0.4.0-dev"
path = "deps/Rocket/codegen"
[dependencies.rocket-simpleauth]
version = "0.4.0"
path = "deps/auth-rs"